--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ mqtt_port = '1883'
 mqtt_QoS = '0'
 TOKEN = "6712983152:AAGLrXDOURlFTXHOs2j8TBMakXx64sfX7Ek"
 tg_password = "123"
-api_data = ['ns=2;i=10869', 'ns=2;i=10853', 'ns=2;i=10849']
+api_data = '["ns=2;i=10869", "ns=2;i=10853", "ns=2;i=10849"]'
 
 db_login='{"dbname": "postgres","user": "postgres","password": "posrgres","host": "212.233.99.38","port": "5432","client_encoding": "utf-8"}'
