--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ cnc_api_5='https://cnc.kovalev.team/get/5'
 mqtt_ip = '82.146.60.95'
 mqtt_port = '1883'
 mqtt_QoS = '0'
-TOKEN = "6712983152:AAGLrXDOURlFTXHOs2j8TBMakXx64sfX7Ek"
+TOKEN = "6878381790:AAGHRLmit8pHJQRTkee4KhfRPO-QgvRmAPo"
 tg_password = "123"
 api_data = '["ns=2;i=10869", "ns=2;i=10853", "ns=2;i=10849"]'
 
-db_login='{"dbname": "postgres","user": "postgres","password": "posrgres","host": "212.233.99.38","port": "5432","client_encoding": "utf-8"}'
+db_login='{"dbname": "postgres","user": "postgres","password": "1Ypo67Hft","host": "212.233.99.38","port": "5432","client_encoding": "utf-8"}'
